Comm-2. Готовое меню, приступаю к работе с шапкой

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<link rel="stylesheet" href="libs/bootstrap/css/bootstrap-grid.min.css">
 		<link rel="stylesheet" href="libs/animate/animate.css">
 		<link rel="stylesheet" href="libs/pushy-master/css/pushy.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 		 <link rel="stylesheet" href="css/style.css">
 
 
@@ -30,7 +31,95 @@
 
 <body>
 
-	<!-- Здесь пишем код -->
+ <div class="container">
+ 	<div class="row">
+ 		<div class="col-md-4">
+ 		<nav class="pushy pushy-left">
+ 		
+ 		<h3>PrasastiEnom</h3>
+    <div class="pushy-content">
+        <ul>
+            <!-- Submenu -->
+            <li class="pushy-submenu">
+                <button><span><i class="fa fa-home" aria-hidden="true"></i>Dashboard</span></button>
+                <ul>
+                    <li class="pushy-link"><a href="#">View site</a></li>
+                    <li class="pushy-link"><a href="#">General settings</a></li>
+                    <li class="pushy-link"><a href="#">Help</a></li>
+                </ul>
+            </li>
+              <li class="pushy-submenu">
+                <button><span><i class="fa fa-envelope" aria-hidden="true"></i>Webmail Service</span></button>
+                <ul>
+                    <li class="pushy-link"><a href="#">Item 1</a></li>
+                    <li class="pushy-link"><a href="#">Item 2</a></li>
+                    <li class="pushy-link"><a href="#">Item 3</a></li>
+                </ul>
+            </li>
+              <li class="pushy-submenu">
+                <button><span><i class="fa fa-cloud" aria-hidden="true"></i>Cloud Storage</span></button>
+                <ul>
+                    <li class="pushy-link"><a href="#">Item 1</a></li>
+                    <li class="pushy-link"><a href="#">Item 2</a></li>
+                    <li class="pushy-link"><a href="#">Item 3</a></li>
+                </ul>
+            </li>
+              <li class="pushy-submenu">
+                <button><span><i class="fa fa-window-maximize" aria-hidden="true"></i>UI Elements</span></button>
+                <ul>
+                    <li class="pushy-link"><a href="#">Item 1</a></li>
+                    <li class="pushy-link"><a href="#">Item 2</a></li>
+                    <li class="pushy-link"><a href="#">Item 3</a></li>
+                </ul>
+            </li>
+              <li class="pushy-submenu">
+                <button><span><i class="fa fa-line-chart" aria-hidden="true"></i>Statics Charts</span></button>
+                <ul>
+                    <li class="pushy-link"><a href="#">Item 1</a></li>
+                    <li class="pushy-link"><a href="#">Item 2</a></li>
+                    <li class="pushy-link"><a href="#">Item 3</a></li>
+                </ul>
+            </li>
+              <li class="pushy-submenu">
+                <button><span><i class="fa fa-clock-o" aria-hidden="true"></i>Freelance Time Manager</span></button>
+                <ul>
+                    <li class="pushy-link"><a href="#">Item 1</a></li>
+                    <li class="pushy-link"><a href="#">Item 2</a></li>
+                    <li class="pushy-link"><a href="#">Item 3</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+
+</nav>
+</div>
+</div>
+</div>
+
+<!-- Site Overlay -->
+<div class="site-overlay"></div>
+
+<!-- Your Content -->
+<div id="container">
+    <!-- Menu Button -->
+   <button class="menu-btn">
+  <img src="img/menu-icon.png" alt="">
+    </button>
+    <div class="container">
+    	<div class="row">
+    		<div class="col-md-12">
+    		<div class="header">
+    			<ul>
+    				<li>Activity</li>
+    				<li>Notifications</li>
+    			</ul>
+    		</div>
+    		
+    		</div>
+    	</div>
+    </div>
+ </div>
+
 
 	<div class="hidden"></div>
 
