--- a/index.html
+++ b/index.html
@@ -136,6 +136,18 @@
 
 	<div class="hidden"></div>
 
+	
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 middle-footer">
+				<div class="hexagon"></div>
+				<div class="hexagon"></div>
+				<div class="hexagon"></div>				
+			</div>
+		</div>
+	</div>
+	
+	
 	<!--[if lt IE 9]>
 	<script src="libs/html5shiv/es5-shim.min.js"></script>
 	<script src="libs/html5shiv/html5shiv.min.js"></script>
